<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shuttle Tracker</string>
    <string name="dummy_button">Routes and Stops</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reset">Reset Zoom</string>
    <string name="action_settings">Settings</string>
    <string name="action_map_toggle">Toggle OSM Map</string>
    <string name="dialog_webview_fallback_title">Map Rendering</string>
    <string name="dialog_webview_fallback_message">This device does not have a supported mapping library. The Shuttle Tracking web site will be displayed instead.</string>
    <string name="title_activity_tracking_amazon_map">Shuttle Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="shuttle">Shuttle 42</string>
    <string name="stop">Sample Stop</string>
    <string name="route">Sample Route</string>
    <string name="shuttle_status">Updated %s ago</string>
    <string name="route_status">3 shuttles running.\nService ends at 11PM.</string>
    <string name="stop_status">West Route: Next scheduled arrival in 2 minutes\nEast Route: Arriving now</string>

</resources>
