<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <LinearLayout
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_marginRight="5dip">

    <TextView
        android:background="#E1501B"
            android:id="@+id/list_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shuttle"
            android:gravity="center"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="E"
            android:textSize="24sp"
            android:textColor="@android:color/primary_text_dark" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/icon"
        android:layout_toRightOf="@+id/icon"
        android:gravity="center"
        android:paddingTop="3dip"
        android:paddingLeft="0dip"
        android:textColor="@android:color/primary_text_light"
        android:text="@string/route" />
    
     <TextView
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
         android:layout_toRightOf="@+id/icon"
         android:gravity="left"
         android:paddingLeft="0dip"
         android:text="@string/route_status"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="12sp" />
</RelativeLayout>
