<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <LinearLayout
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_marginRight="5dip">

    <ImageView
            android:id="@+id/list_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shuttle"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/icon"
        android:layout_toRightOf="@+id/icon"
        android:gravity="center"
        android:paddingTop="8dip"
        android:paddingLeft="0dip"
        android:textColor="@android:color/primary_text_light"
        android:text="@string/shuttle" />
    
     <TextView
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
         android:layout_toRightOf="@+id/icon"
         android:gravity="center"
         android:paddingLeft="0dip"
         android:text="@string/route"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="12sp" />
     
     <TextView
         android:id="@+id/last_updated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@id/title"
         android:layout_marginRight="5dip"
         android:gravity="right"
         android:paddingTop="8dip"
         android:paddingRight="8dip"
         android:text="@string/shuttle_status"
         android:textSize="10sp" />
         

</RelativeLayout>
